fix swagger and API.js
